# swagger.json
@@ -483,7 +483,14 @@
         },
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Image"
+                }
+              }
+            }
           },
           "400": {
             "description": "Bad request"
@@ -572,7 +579,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "multipart/form-data": {
+            "application/json": {
               "schema": {
                 "properties": {
                   "title": {
@@ -1067,6 +1074,12 @@
           },
           "liked": {
             "type": "boolean"
+          },
+          "userInfo": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/User"
+            }
           }
         }
       },
